warningFlags: record the resolved warning policy per source set
A requires that pulls a module into a set's RESOLUTION makes javac warn in that
compilation, and -Werror turns the warning into a build failure -- in every set
that resolves it, whether or not that set uses the API. Which sets those are is a
question about the module graph. Whether it costs anything is this flag, and
nothing recorded it.

⛔ It cannot be read off a build file. OpenSearch appends -Werror to every compile
task at build.gradle:280 and subtracts it again in 12 subprojects (libs/common
build.gradle:56, whose comment says why: "use of incubator modules is reported as
a warning"). Whether a given set fails on a warning is the outcome of both, so a
grep finds the word in 13 places and cannot say it of any of them. The build
plugins run INSIDE the build and read options.compilerArgs after the arithmetic.

SourceSet.warningFlags() is -Werror, -nowarn and the -Xlint family, per set, in
all THREE producers -- a defect in one of these is a hypothesis about the others:

  gradleplugin  options.compilerArgs of the set's own JavaCompile task
  mvnplugin     <compilerArgs>, PLUS <failOnWarning>/maven.compiler.failOnWarning
                synthesised to -Werror. Maven spells the same fact two ways and
                reading only one is a silent half-answer whose error is OPTIMISTIC
  compile-log   javac's own line -- the strongest evidence there is

⛔ The compile-log route was throwing this away in silence: -Xlint was swallowed by
the `option.startsWith("-X")` catch-all and -Werror fell through to "ignoring
unknown option". The new branch sits BEFORE that one. The fixture that proves it
is a real Elasticsearch javac line already in the tree, carrying -Werror, two
-Xlint arguments and a near-miss -Xdoclint:all that must NOT be taken.

⚠ Deliberately narrow: one question, one consumer. --enable-preview, --add-exports
and -proc: are real and are NOT here, because no failure has asked for them yet.

⚠ Sourc